--- a/jade/scss/_icons.scss
+++ b/jade/scss/_icons.scss
@@ -37,3 +37,11 @@
 .iconsp-35-facebook {
   background-position: -35px -80px;
 }
+
+.iconsp-35-quoteopen {
+  background-position: -70px -80px;
+}
+
+.iconsp-35-quoteclose {
+  background-position: -105px -80px;
+}
