--- a/jade/home.jade
+++ b/jade/home.jade
@@ -134,8 +134,8 @@ block main
                 span.dot .
                 span Service Name
     .why-choose
-      .background
-        img(src="images/before-why-choose.png" height="141")
+      .background-before
+        img(src="images/before-why-choose.png" height="280")
       .container
         h1.title why choose patra group
         ul.row
@@ -149,6 +149,80 @@ block main
             h3.sub-title modern
             span Benefit 1 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.
         a(href="").read-more read more about us
+      .background-after
+        img(src="images/after-why-choose.png" height="143")
+    .testimonials
+      .container
+        h1.title testimonials
+        ul.testimonials-bxSlider
+          li
+            div
+              a(href="").logo-image
+                img(src="images/testimonials-logo-1.jpg")
+              .content
+                i.iconsp-35-quoteopen
+                p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor inci-didunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exer-citation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
+                i.iconsp-35-quoteclose
+                h4.company pasiri's
+                span Eatwood
+            div
+              a(href="").logo-image
+                img(src="images/testimonials-logo-1.jpg")
+              .content
+                i.iconsp-35-quoteopen
+                p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor inci-didunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exer-citation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
+                i.iconsp-35-quoteclose
+                h4.company pasiri's
+                span Eatwood
+          li
+            div
+              a(href="").logo-image(style="padding-top: 24px;")
+                img(src="images/testimonials-logo-2.jpg")
+              .content
+                i.iconsp-35-quoteopen
+                p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor inci-didunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exer-citation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
+                i.iconsp-35-quoteclose
+                h4.company subway
+                span Marrickville
+            div
+              a(href="").logo-image
+                img(src="images/testimonials-logo-3.jpg")
+              .content
+                i.iconsp-35-quoteopen
+                p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor inci-didunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exer-citation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
+                h4.company garlos pies
+                span Eatwood
+                i.iconsp-35-quoteclose
+          li
+            div
+              a(href="").logo-image
+                img(src="images/testimonials-logo-1.jpg")
+              .content
+                i.iconsp-35-quoteopen
+                p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor inci-didunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exer-citation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
+                h4.company pasiri's
+                span Eatwood
+                i.iconsp-35-quoteclose
+            div
+              a(href="").logo-image
+                img(src="images/testimonials-logo-3.jpg")
+              .content
+                i.iconsp-35-quoteopen
+                p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor inci-didunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exer-citation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
+                h4.company garlos pies
+                span Eatwood
+                i.iconsp-35-quoteclose
+    .footer
+      .container
+        ul
+          li
+            i.iconsp-35-facebook
+            a(href="") Privacy Policy
+          li
+            span Copyright © 2014 Patra Group Pty Ltd. All rights reserved.
+          li
+            span Designed by Openseed
+
 
 
 
