--- a/jade/scss/_common.scss
+++ b/jade/scss/_common.scss
@@ -1,9 +1,14 @@
+html {
+  background-color: $white;
+}
 body {
   background-color: $black;
   color: $white;
   font-family: $proxima_nova_light;
   font-size: 16px;
   -webkit-text-size-adjust: 100%;
+  width: 1218px;
+  margin: 0 auto;
 }
 img {
   width: 100%;
@@ -13,14 +18,15 @@ img {
 a {
   color: inherit;
   text-decoration: none;
-  &:hover {
+  &:hover,
+  &:focus {
     color: inherit;
     text-decoration: none;
   }
 }
 
 h1 {
-  font-size: 52.5px;
+  font-size: 52.54px;
 }
 
 h3 {
@@ -29,7 +35,7 @@ h3 {
 }
 
 h4 {
-  font-size: 20px;
+  font-size: 20.32px;
   line-height: 23px;
 }
 
