--- a/jade/scss/_home.scss
+++ b/jade/scss/_home.scss
@@ -1,4 +1,5 @@
 .home-page {
+  padding-bottom: 1px;
   .slider {
     li {
       position: relative;
@@ -113,16 +114,24 @@
     background-color: $blue;
     margin-top: 336px;
     position: relative;
-    .background {
+    .background-before {
       position: absolute;
       top: -280px;
       left: 0;
       width: 100%;
       height: 280px;
     }
+    .background-after {
+      position: absolute;
+      bottom: -143px;
+      left: 0;
+      width: 100%;
+      height: 143px;
+    }
     h1.title {
       margin: 40px 0  62px 0;
       padding: 0 250px;
+      text-shadow: 1px 1px 1px #6B6868;
     }
     ul {
       li {
@@ -158,6 +167,7 @@
       position: relative;
       font-size: 20px;
       display: block;
+      font-family: $roboto_condensed_regular;
       &:after {
         position: absolute;
         content: "";
@@ -168,6 +178,71 @@
         left: 0;
         top: -12px;
       }
+    }
+  }
+  .testimonials {
+    margin-bottom: 180px;
+    h1.title {
+      margin: 210px 0 58px 0;
+    }
+    ul {
+      font-size: 16.26px;
+      color: black;
+      li {
+        > div {
+          margin-bottom: 30px;
+          display: table;
+        }
+        .logo-image {
+          width: 220px;
+          height: 220px;
+          display: table-cell;
+          text-align: center;
+          vertical-align: middle;
+          background-color: #fff;
+          img {
+            width: auto;
+            height: auto;
+            margin: 0 auto;
+          }
+        }
+        .content {
+          display: table-cell;
+          width: 77%;
+          background-color: #eeeeee;
+          position: relative;
+          vertical-align: top;
+          padding: 0 70px;
+          i {
+            zoom: 1.1;
+            position: absolute;
+            bottom: 84px;
+            right: 78px;
+            &:first-child {
+              top: 37px;
+              left: 54px;
+            }
+          }
+          p {
+            line-height: 24.39px;
+            padding: 48px 0px 20px 0px;
+          }
+          h4.company {
+            text-transform: uppercase;
+            font-family: $proxima_nova_bold;
+            margin-bottom: 4px;
+          }
+          span {
+            font-family: $roboto_condensed_light;
+          }
+        }
+      }
+    }
+    .bx-pager {
+      bottom: -40px;
+    }
+    .bx-pager-item {
+      margin: 0 10px;
     }
   }
 }
