Responsive mobile version

--- a/jade/scss/_icons.scss
+++ b/jade/scss/_icons.scss
@@ -45,3 +45,23 @@
 .iconsp-35-quoteclose {
   background-position: -105px -80px;
 }
+
+.iconsp-35-enquire-mobile {
+  background-position: -140px -80px;
+}
+
+.iconsp-35-email {
+  background-position: -175px -80px;
+}
+
+.iconsp-35-location {
+  background-position: -210px -80px;
+}
+
+.iconsp-35-phone-black {
+  background-position: -245px -80px;
+}
+
+.iconsp-35-phone-white {
+  background-position: -280px -80px;
+}
