--- a/jade/scss/style.scss
+++ b/jade/scss/style.scss
@@ -9,5 +9,7 @@ Version:0.1
 @import "_icons";
 @import "_fonts";
 @import "_bxslider";
+@import "_slicknav";
 @import "_layout";
 @import "_home";
+@import "_responsive";
