--- a/jade/home.jade
+++ b/jade/home.jade
@@ -1,28 +1,57 @@
 extends index
 block main
   .home-page.page
-    .header
-      .container
-        a(href="").logo
-          img(src="images/logo.png")
-        .navbar
-          .info
-            span (02)9597 6788
-            span info@patragroup.con.au
-            span 4/450 West Botany Street, Rockdale NSW, 2216
-          ul.menu
-            li
-              a(href="") about
-            li
-              a(href="") services
-            li
-              a(href="") portfolio
-            li
-              a(href="") contact
-        a.enquire(href="")
-          i.iconsp-35-enquire
-          span enquire
     .slider
+      #header.header
+        .container
+          a(href="").logo
+            img(src="images/logo.png")
+          .navbar
+            .info
+              span (02)9597 6788
+              span info@patragroup.con.au
+              span 4/450 West Botany Street, Rockdale NSW, 2216
+            ul.menu
+              li
+                a(href="") about
+              li
+                a(href="") services
+              li
+                a(href="") portfolio
+              li
+                a(href="") contact
+          a.enquire(href="")
+            i.iconsp-35-enquire
+            span enquire
+      #header-mobile.header
+        ul#menu.menu
+          li
+            a.scroll(href="") about
+          li
+            a.scroll(href="") services
+            ul
+              li: a.scroll(href="") stainless steel fabrication
+              li: a.scroll(href="") refrigeration
+              li: a.scroll(href="") shopfitting
+              li: a.scroll(href="") catering equipment
+              li: a.scroll(href="") design & consilation
+          li
+            a.scroll(href="") portfolio
+          li
+            a.scroll(href="") contact
+          li
+            a.scroll(href="")
+              i.iconsp-35-enquire-mobile
+              span enquire
+        #main-menu
+          a(href="").logo
+            img(src="images/logo.png")
+          .contact-mobile
+            ul
+              li: a(href=""): i.iconsp-35-email
+              li: a(href=""): i.iconsp-35-location
+              li: a(href=""): i.iconsp-35-phone-white
+            a.phone-mobile(href=""): i.iconsp-35-phone-black
       ul.main-bxslider
         li
           img(src="images/slide-1.jpg" height="730")
@@ -49,7 +78,8 @@ block main
         h1.title services
         ul.services-list
           li
-            h4.sub-title stainless steel fabrication
+            h4.sub-title
+              span stainless steel fabrication
             a(href="")
               i.iconsp-steel
             ul.name-list
@@ -66,7 +96,8 @@ block main
                 span.dot .
                 span Service Name
           li
-            h4.sub-title refrigeration
+            h4.sub-title
+              span refrigeration
             a(href="")
               i.iconsp-fridge
             ul.name-list
@@ -83,7 +114,8 @@ block main
                 span.dot .
                 span Service Name
           li
-            h4.sub-title shopfitting
+            h4.sub-title
+              span shopfitting
             a(href="")
               i.iconsp-shopfitting
             ul.name-list
@@ -100,7 +132,8 @@ block main
                 span.dot .
                 span Service Name
           li
-            h4.sub-title catering equipment
+            h4.sub-title
+              span catering equipment
             a(href="")
               i.iconsp-catering
             ul.name-list
@@ -117,7 +150,8 @@ block main
                 span.dot .
                 span Service Name
           li
-            h4.sub-title design & consilation
+            h4.sub-title
+              span design & consilation
             a(href="")
               i.iconsp-design
             ul.name-list
@@ -160,18 +194,14 @@ block main
               a(href="").logo-image
                 img(src="images/testimonials-logo-1.jpg")
               .content
-                i.iconsp-35-quoteopen
                 p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor inci-didunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exer-citation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-                i.iconsp-35-quoteclose
                 h4.company pasiri's
                 span Eatwood
             div
               a(href="").logo-image
                 img(src="images/testimonials-logo-1.jpg")
               .content
-                i.iconsp-35-quoteopen
                 p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor inci-didunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exer-citation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-                i.iconsp-35-quoteclose
                 h4.company pasiri's
                 span Eatwood
           li
@@ -179,39 +209,31 @@ block main
               a(href="").logo-image(style="padding-top: 24px;")
                 img(src="images/testimonials-logo-2.jpg")
               .content
-                i.iconsp-35-quoteopen
                 p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor inci-didunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exer-citation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-                i.iconsp-35-quoteclose
                 h4.company subway
                 span Marrickville
             div
               a(href="").logo-image
                 img(src="images/testimonials-logo-3.jpg")
               .content
-                i.iconsp-35-quoteopen
                 p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor inci-didunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exer-citation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
                 h4.company garlos pies
                 span Eatwood
-                i.iconsp-35-quoteclose
           li
             div
               a(href="").logo-image
                 img(src="images/testimonials-logo-1.jpg")
               .content
-                i.iconsp-35-quoteopen
                 p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor inci-didunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exer-citation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
                 h4.company pasiri's
                 span Eatwood
-                i.iconsp-35-quoteclose
             div
               a(href="").logo-image
                 img(src="images/testimonials-logo-3.jpg")
               .content
-                i.iconsp-35-quoteopen
                 p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor inci-didunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exer-citation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
                 h4.company garlos pies
                 span Eatwood
-                i.iconsp-35-quoteclose
     .footer
       .container
         ul
@@ -219,7 +241,8 @@ block main
             i.iconsp-35-facebook
             a(href="") Privacy Policy
           li
-            span Copyright © 2014 Patra Group Pty Ltd. All rights reserved.
+            span Copyright © 2014 Patra Group Pty Ltd.
+            span All rights reserved.
           li
             span Designed by Openseed
 
