--- a/jade/index.jade
+++ b/jade/index.jade
@@ -19,4 +19,5 @@ html(lang='en')
     script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js" type='text/javascript')
     script(src='js/jquery.bxslider.min.js' type='text/javascript')
     script(src='js/bootstrap.min.js' type='text/javascript')
+    script(src='js/jquery.slicknav.min.js' type='text/javascript')
     script(src='js/script.js' type='text/javascript')
