--- a/jade/scss/_home.scss
+++ b/jade/scss/_home.scss
@@ -1,5 +1,9 @@
 .home-page {
   padding-bottom: 1px;
+  .header {
+    z-index: 1;
+    position: relative;
+  }
   .slider {
     li {
       position: relative;
@@ -36,6 +40,9 @@
         }
       }
     }
+    .bx-wrapper {
+      top: -70px;
+    }
     .bx-pager {
       top: 75%;
       right: 27.7%;
@@ -47,7 +54,7 @@
     }
   }
   .services {
-    margin-top: 77px;
+    margin-top: -16px;
     .services-list {
       margin-top: 62px;
       li {
@@ -59,16 +66,15 @@
         h4.sub-title {
           text-align: center;
           text-transform: uppercase;
-          font-family: $roboto_condensed_bold;
-          padding: 20px 14px 14px 14px;
+          font-family: "roboto_condensed_bold";
           height: 68px;
-        }
-        a {
-          padding: 55px 0 40px 0;
-          text-align: center;
-          background-color: $black;
+          display: table;
+          width: 100%;
           position: relative;
-          display: block;
+          span {
+            display: table-cell;
+            vertical-align: middle;
+          }
           &:after {
             position: absolute;
             content: "";
@@ -77,7 +83,39 @@
             border-left: 88px solid transparent;
             border-top: 20px solid #1ca5d7;
             left: 0;
-            top: 0;
+            bottom: -20px;
+            z-index: 1;
+          }
+        }
+        a {
+          padding: 55px 0 40px 0;
+          text-align: center;
+          background-color: $black;
+          display: block;
+        }
+        .name-list {
+          padding: 70px 23px;
+          position: relative;
+          li {
+            display: block;
+            width: 100%;
+            font-family: $proxima_nova_light;
+            span {
+              display: inline-block;
+              width: 86%;
+              line-height: 30px;
+              vertical-align: middle;
+              letter-spacing: 1px;
+            }
+            .dot {
+              display: inline-block;
+              font-size: 45px;
+              line-height: 0;
+              width: 10px;
+              height: 24px;
+              margin-top: -5px;
+              margin-right: 4px;
+            }
           }
           &:before {
             position: absolute;
@@ -87,26 +125,7 @@
             border-left: 11px solid transparent;
             border-bottom: 11px solid #1ca5d7;
             left: 42%;
-            bottom: 0;
-          }
-        }
-        .name-list {
-          padding: 70px 24px;
-          li {
-            display: block;
-            width: 100%;
-            font-family: $proxima_nova_light;
-            span {
-              display: inline-block;
-              width: 78%;
-              line-height: 30px;
-            }
-            .dot {
-              display: inline-block;
-              font-size: 40px;
-              line-height: 0;
-              width: 10px;
-            }
+            top: -11px;
           }
         }
         &:last-child {
@@ -136,7 +155,6 @@
     h1.title {
       margin: 40px 0  62px 0;
       padding: 0 250px;
-      text-shadow: 1px 1px 1px #6B6868;
     }
     ul {
       li {
@@ -152,6 +170,7 @@
           text-transform: uppercase;
           margin-bottom: 20px;
           font-family: $roboto_condensed_bold;
+          text-shadow: 1px 0 4px rgba(0,0,0,0.4);
         }
         span {
           font-size: 20px;
@@ -205,10 +224,22 @@
           text-align: center;
           vertical-align: middle;
           background-color: #fff;
+          position: relative;
           img {
             width: auto;
             height: auto;
             margin: 0 auto;
+          }
+          &:after {
+            position: absolute;
+            content: "";
+            width: 0px;
+            border-top: 12px solid transparent;
+            border-bottom: 12px solid transparent;
+            border-left: 10px solid $white;
+            right: -10px;
+            top: 45%;
+            z-index: 1;
           }
         }
         .content {
@@ -230,7 +261,22 @@
           }
           p {
             line-height: 24.39px;
-            padding: 48px 0px 20px 0px;
+            margin: 48px 0px 20px 0px;
+            position: relative;
+            &:before {
+              content: url("img/quoteopen.png");
+              position: absolute;
+              width: 0px;
+              left: -10px;
+              top: 0;
+            }
+            &:after {
+              content: url("img/quoteclose.png");
+              position: absolute;
+              width: 0px;
+              right: 24px;
+              bottom: -4px;
+            }
           }
           h4.company {
             text-transform: uppercase;
