--- a/jade/home.jade
+++ b/jade/home.jade
@@ -6,6 +6,7 @@ block main
         .container
           a(href="").logo
             img(src="images/logo.png")
+            .logo-traingle
           .navbar
             .info
               span (02)9597 6788
@@ -80,6 +81,7 @@ block main
           li
             h4.sub-title
               span stainless steel fabrication
+              .traingle
             a(href="")
               i.iconsp-steel
             ul.name-list
@@ -98,6 +100,7 @@ block main
           li
             h4.sub-title
               span refrigeration
+              .traingle
             a(href="")
               i.iconsp-fridge
             ul.name-list
@@ -116,6 +119,7 @@ block main
           li
             h4.sub-title
               span shopfitting
+              .traingle
             a(href="")
               i.iconsp-shopfitting
             ul.name-list
@@ -134,6 +138,7 @@ block main
           li
             h4.sub-title
               span catering equipment
+              .traingle
             a(href="")
               i.iconsp-catering
             ul.name-list
@@ -152,6 +157,7 @@ block main
           li
             h4.sub-title
               span design & consilation
+              .traingle
             a(href="")
               i.iconsp-design
             ul.name-list
