--- a/jade/scss/_home.scss
+++ b/jade/scss/_home.scss
@@ -58,7 +58,7 @@
     .services-list {
       margin-top: 62px;
       li {
-        background-color: $blue;
+        background-image: url("img/bg-blue.png");
         display: inline-block;
         width: 18%;
         margin-right: 20px;
@@ -75,17 +75,18 @@
             display: table-cell;
             vertical-align: middle;
           }
-          &:after {
+          .traingle {
             position: absolute;
-            content: "";
-            width: 0px;
-            border-right: 87px solid transparent;
-            border-left: 88px solid transparent;
-            border-top: 20px solid #1ca5d7;
+            background-image: url("../images/traingle.png");
+            background-repeat: no-repeat;
+            height: 12px;
+            width: 100%;
+            bottom: -12px;
+            z-index: 9;
+            background-size: 100%;
             left: 0;
-            bottom: -20px;
-            z-index: 1;
           }
+          
         }
         a {
           padding: 55px 0 40px 0;
@@ -135,7 +136,7 @@
     }
   }
   .why-choose {
-    background-color: $blue;
+    background-image: url("img/bg-blue.png");
     margin-top: 336px;
     position: relative;
     .background-before {
@@ -186,12 +187,13 @@
       margin: 70px auto;
       text-transform: uppercase;
       padding: 18px 0px;
-      letter-spacing: -1px;
       border-bottom: 1px solid #ababab;
       position: relative;
       font-size: 20px;
       display: block;
       font-family: $roboto_condensed_regular;
+      word-spacing: 2px;
+      letter-spacing: 0px;
       &:after {
         position: absolute;
         content: "";
@@ -208,6 +210,13 @@
     margin-bottom: 180px;
     h1.title {
       margin: 210px 0 58px 0;
+    }
+    .bx-wrapper .bx-pager.bx-default-pager a {
+      width: 16px;
+      height: 16px;
+      -moz-border-radius: 8px;
+      -webkit-border-radius: 8px;
+      border-radius: 8px;
     }
     ul {
       font-size: 16.26px;
@@ -245,7 +254,7 @@
         .content {
           display: table-cell;
           width: 77%;
-          background-color: #eeeeee;
+          background-image: url("img/bg-gray.png");
           position: relative;
           vertical-align: top;
           padding: 0 70px;
