--- a/jade/scss/_layout.scss
+++ b/jade/scss/_layout.scss
@@ -27,16 +27,16 @@
       display: inline-block;
       vertical-align: middle;
       position: relative;
-      &:after {
+      .logo-traingle {
         position: absolute;
-        content: "";
-        width: 0px;
-        border-right: 95px solid transparent;
-        border-left: 95px solid transparent;
-        border-top: 12px solid $blue;
-        left: 0;
+        background-image: url("../images/traingle.png");
+        background-repeat: no-repeat;
+        height: 12px;
+        width: 100%;
         bottom: -12px;
         z-index: 9;
+        background-size: 100%;
+        left: 0;
       }
     }
     .menu {
@@ -114,5 +114,6 @@
     text-align: center;
     letter-spacing: 1px;
     text-shadow: 1px 0 4px rgba(0,0,0,0.4);
+    line-height: 64px;
   }
 }
