--- a/jade/scss/_layout.scss
+++ b/jade/scss/_layout.scss
@@ -47,6 +47,9 @@
       li {
         display: inline-block;
         padding: 0 38px;
+        a:hover {
+          color: #1ca5d7;
+        }
       }
     }
     .navbar {
