Edit logo mobile version

--- a/jade/home.jade
+++ b/jade/home.jade
@@ -47,6 +47,7 @@ block main
         #main-menu
           a(href="").logo
             img(src="images/logo.png")
+            .logo-traingle
           .contact-mobile
             ul
               li: a(href=""): i.iconsp-35-email
